<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bggradient"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="18dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/image_detail"
                    android:layout_width="140dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/logo_upn" />
                <TextView android:id="@+id/tv_name_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/name_faculty"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="22sp" />
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="#FFFFFF">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView android:id="@+id/tv_desc_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/name_description"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                    <TextView android:id="@+id/tv_short_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="50dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/short_description"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                    <TextView android:id="@+id/tv_harga_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="50dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/harga"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tv_lokasi_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="50dp"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingBottom="0dp"
                        android:text="@string/instagram"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tv_link_web"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/https_www_google_com"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>